<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:porter="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.partho.porter.porterdelivery.ParcelDetailActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/porter_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="200dp">

            <!-- Top Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    >

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/porter_parcel_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="150dp"
                        android:scaleType="fitCenter"
                        />

                </LinearLayout>



            </LinearLayout>

            <!-- Parcel attribute begins-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <!-- ETA, Phone ,Weight-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="9">

                    <!--ETA-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            porter:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_truck"/>

                        <TextView
                            android:id="@+id/porter_parcel_eta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="21-11-2015"
                            android:textColor="@color/porter_bg_light_blue"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />


                    </LinearLayout>


                    <!--Phone-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            porter:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_phone"/>

                        <TextView
                            android:id="@+id/porter_parcel_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="7838943564"
                            android:textColor="@color/porter_bg_light_blue"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                    <!--Phone-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            porter:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_weight"/>

                        <TextView
                            android:id="@+id/porter_parcel_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2.3kg"
                            android:textColor="@color/porter_bg_light_blue"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                </LinearLayout>

                <!-- Price, Quantity ,Color-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:weightSum="9">

                    <!--Price-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            porter:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_rupee"/>

                        <TextView
                            android:id="@+id/porter_parcel_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="400"
                            android:textColor="@color/porter_bg_light_blue"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />


                    </LinearLayout>


                    <!--Quantity-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            porter:fontName="fa.ttf"
                            android:textSize="15sp"
                            android:text="@string/fa_cart"/>

                        <TextView
                            android:id="@+id/porter_parcel_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textColor="@color/porter_bg_light_blue"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                    <!--Color-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:orientation="vertical">



                        <android.support.v7.widget.CardView
                            android:id="@+id/porter_parcel_color"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:textSize="20sp"
                            porter:cardElevation="4dp"
                            />

                    </LinearLayout>

                </LinearLayout>






            </LinearLayout>

            <!-- Parcel attribute ends-->

            <!-- MAP-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Live update"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        />



                </android.support.v7.widget.CardView>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp">

                <fragment
                    android:id="@+id/porter_parcel_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>

                <ImageView
                    android:id="@+id/porter_veil_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:color/transparent" />


            </RelativeLayout>

            <!--MAP END-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                    android:id="@+id/porter_parcel_share"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    porter:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_share"/>

                <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                    android:id="@+id/porter_parcel_link"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    porter:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_link"/>

                <com.partho.porter.porterdelivery.utils.ui.CustomTextView
                    android:id="@+id/porter_parcel_sms"
                    porter:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_message"/>





            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>
